[gd_scene load_steps=13 format=2]

[ext_resource path="res://Objects/Player/PlayerSprites/PlayerBodies/Player_Style_00.png" type="Texture" id=1]
[ext_resource path="res://Objects/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Objects/Player/PlayerSprites/Teleport_Indicator.png" type="Texture" id=3]
[ext_resource path="res://Objects/Player/target_outline.shader" type="Shader" id=4]
[ext_resource path="res://Objects/Player/TeleportIndicator.gd" type="Script" id=5]
[ext_resource path="res://Objects/Player/TeleportIndicatorLoop.tres" type="Animation" id=6]
[ext_resource path="res://Objects/Player/AnimationPlayer.gd" type="Script" id=7]
[ext_resource path="res://Objects/Player/Damaged.tres" type="Animation" id=8]
[ext_resource path="res://Objects/Player/PlayerHealthBG.tres" type="StyleBox" id=9]
[ext_resource path="res://Objects/Player/PlayerHealthFG.tres" type="StyleBox" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 25.0

[sub_resource type="ShaderMaterial" id=2]
render_priority = 1
shader = ExtResource( 4 )
shader_param/outline_width = 7.724
shader_param/outline_color = Color( 0, 0, 0, 1 )
shader_param/rotation = 0.0

[node name="Player" type="KinematicBody2D" groups=[
"CanBeHurt",
"Player",
]]
z_index = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MainSprite" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="MainSprite"]
remote_path = NodePath("../PlayerEffectsTree/Node2D")
update_rotation = false

[node name="PlayerEffectsTree" type="Node" parent="MainSprite"]

[node name="Node2D" type="Node2D" parent="MainSprite/PlayerEffectsTree"]
scale = Vector2( 0.1, 0.1 )

[node name="DashTween" type="Tween" parent="."]

[node name="TeleportIndicator" type="Sprite" parent="."]
visible = false
material = SubResource( 2 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="TeleportIndicator"]
anims/loop = ExtResource( 6 )
script = ExtResource( 7 )

[node name="BulletTree" type="Node" parent="."]

[node name="Hud" type="CanvasLayer" parent="."]

[node name="EquipedBulletText" type="RichTextLabel" parent="Hud"]
margin_right = 439.0
margin_bottom = 167.0
mouse_filter = 2
text = "Whomst've'd'll's"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarLeft" type="ProgressBar" parent="Hud"]
anchor_bottom = 1.0
margin_top = 1080.0
margin_right = 1080.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
rect_rotation = 270.0
custom_styles/fg = ExtResource( 10 )
custom_styles/bg = ExtResource( 9 )
max_value = 1.0
value = 0.5
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarRight" type="ProgressBar" parent="Hud"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.999878
margin_top = 1080.0
margin_right = 1079.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
rect_rotation = 270.0
rect_scale = Vector2( 1, -1 )
custom_styles/fg = ExtResource( 10 )
custom_styles/bg = ExtResource( 9 )
max_value = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerAnim" type="AnimationPlayer" parent="."]
anims/Damaged = ExtResource( 8 )
